--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="seccion-formulario">
       <h1>Inicia sesión</h1>
-      <p>¿No tienes una cuenta? <a href="registro.html">Regístrate</a></p>
+      <p>¿No tienes una cuenta? <a href="registro.html" target="_blank">Regístrate</a></p>
       <form action="inicio">
         <div class="campo">
           <label for="correo">Correo electrónico</label>
